--- a/test/fixtures/moonlyters.yml
+++ b/test/fixtures/moonlyters.yml
@@ -11,3 +11,18 @@ two:
   rating: 1.5
   education: MyText
   experience: MyText
+
+# == Schema Information
+#
+# Table name: moonlyters
+#
+#  id          :integer         not null, primary key
+#  description :text
+#  rating      :float
+#  education   :text
+#  experience  :text
+#  created_at  :datetime
+#  updated_at  :datetime
+#  user_id     :integer
+#
+
