--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -15,3 +15,19 @@ two:
   email: MyString
   password: MyString
   avatar: MyString
+
+# == Schema Information
+#
+# Table name: users
+#
+#  id         :integer         not null, primary key
+#  username   :string(255)
+#  firstName  :string(255)
+#  lastName   :string(255)
+#  email      :string(255)
+#  password   :string(255)
+#  avatar     :string(255)
+#  created_at :datetime
+#  updated_at :datetime
+#
+
