--- a/test/fixtures/specialties.yml
+++ b/test/fixtures/specialties.yml
@@ -7,3 +7,19 @@ one:
 two:
   description: MyText
   rate: 1.5
+
+# == Schema Information
+#
+# Table name: specialties
+#
+#  id             :integer         not null, primary key
+#  description    :text
+#  rate           :float
+#  created_at     :datetime
+#  updated_at     :datetime
+#  moonlyter_id   :integer
+#  total_rating   :integer
+#  average_rating :float
+#  num_ratings    :integer
+#
+
