--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,7 +5,7 @@ one:
   firstName: MyString
   lastName: MyString
   email: MyString
-  password: MyString
+  password_digest: MyString
   avatar: MyString
 
 two:
@@ -13,7 +13,7 @@ two:
   firstName: MyString
   lastName: MyString
   email: MyString
-  password: MyString
+  password_digest: MyString
   avatar: MyString
 
 # == Schema Information
